Removed all TODOs from the GDD

--- a/Game_Design_Document/Content/Characters.tex
+++ b/Game_Design_Document/Content/Characters.tex
@@ -1,7 +1,7 @@
 \section{Game Characters}
 
-Each player can choose a category to give to their avatar, each with a special ability to use during the game. Those avatars can be customized with hats and clothes \textbf{TODO}Collectable?.\\
-There are 4 categories:\\
+Each player can choose a class to give to their avatar, each with a special ability to use during the game. Those avatars can be customized with hats and clothes, which come in the form of microtransactions..\\
+There are 4 classes:\\
 \begin{itemize}
 	\item (Fake) Altruists
 	\item Mighty Men
