--- a/Game_Design_Document/Content/Gameplay/Achievements.tex
+++ b/Game_Design_Document/Content/Gameplay/Achievements.tex
@@ -34,3 +34,5 @@ Achievements can only be earned once and will grant a large amount of in-game cu
 \paragraph{Terminator} Kill a Character targeting him with a Drone.
 \paragraph{Collateral} Have your Character Killed by a Drone connected to a Drone Room after you failed its minigame.
 
+
+\pagebreak 
