--- a/Game_Design_Document/Content/Gameplay/Controls.tex
+++ b/Game_Design_Document/Content/Gameplay/Controls.tex
@@ -1,5 +1,6 @@
 \subsection{Controls}
 Controls of our game are point and click, so the user will need a mouse (or a touchpad screen) in order to play the game, just by pressing buttons or dragging the left mouse key when solving puzzles.\\
+Some minigames involve the use of directional keys. On devices without a keyboard, an on-screen virtual D-pad will be available.
 
 \input{Content/Gameplay/Controls/Procedures}
 \input{Content/Gameplay/Controls/Interface}
