--- a/Game_Design_Document/Content/Gameplay/Game_Mechanics/Rooms.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Mechanics/Rooms.tex
@@ -7,61 +7,63 @@ Check the Puzzles section for an in-depth explanation of individual puzzles.
 
 \paragraph{Entrance} The entrance is an Empty Room where everyone starts.
 
-\paragraph{Exit} The exit is an Empty Room players have to reach after they find the Broom. The victory conditions are further explained in the X Section. //TODO section name?
+\paragraph{Exit} The exit is an Empty Room players have to reach after they find the Broom. The victory conditions are further explained in the \textbf{Game Modes} Section.
+
+For the puzzles description, look at the \textbf{Puzzles} section.
 
 \paragraph{Death} The Death Room is the most dangerous one.
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Bullet Hell}.
 	\item If the Player succeeds in the Minigame, his Character is \textbf{Injured}.
 	\item If the Player fails    in the Minigame, his Character is \textbf{Dead}.
 \end{itemize}
 
 \paragraph{Portal} This room was used for testing teleportation technologies by the Ancients. However it's unstable and hard to predict.
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Rachet\&Clank's Trespasser}. //TODO change name
+	\item This Room's Puzzle is \textbf{Connect the Light}. //TODO change name
 	\item If the Player succeeds in the Minigame, his Character is \textbf{Teleported} to a Room of his choice.
 	\item If the Player fails    in the Minigame, his Character is \textbf{Teleported} to a randomly chosen Room.
 \end{itemize}
 
 \paragraph{Gear} This mechanical Room controls the movement of the Rooms in the Facility.
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Linking Pipes}. //TODO change name
+	\item This Room's Puzzle is \textbf{Connect the Gears}. //TODO change name
 	\item If the Player succeeds in the Minigame, he can move the Rooms in the line of this Room along one axis.
 \end{itemize}
 
 \paragraph{Brooms Depot} This Room is the key to deceive your opponents. It will add fake Brooms to the environment.
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Jigsaw}.
 	\item If the Player succeeds in the Minigame, fake Brooms are spawned in random Rooms and this Room becomes \textbf{Empty}.
 \end{itemize}
 
 \paragraph{Mine (OFF)} The first one entering this Room can prepare a nice explodey trap.
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Electrolyzer}.
 	\item If the Player succeeds in the Minigame, this Room becomes \textbf{Mine (ON)}.
 \end{itemize}
 
 \paragraph{Mine (ON)}
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Precise movement}.
 	\item If the Player fails    in the Minigame, his Character is \textbf{Injured} and this Room becomes \textbf{Mine (OFF)}.
 \end{itemize}
 
 \paragraph{Trap (OFF)} The first one entering this Room can prepare a nice but less explodey trap.
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Decryptor}.
 	\item If the Player succeeds in the Minigame, this Room becomes \textbf{Trap (ON)}.
 \end{itemize}
 
 \paragraph{Trap (ON)}
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Hacker}.
 	\item If the Player fails    in the Minigame, his Character is \textbf{Trapped} and this Room becomes \textbf{Trap (OFF)}.
 \end{itemize}
 
-\paragraph{Bomb} TODO description
+\paragraph{Bomb}
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Keep talking and nobody explodes ma più matematico}. //TODO change name
+	\item This Room's Puzzle is \textbf{Hangman}. //TODO change name
 	\item When a Character is in the room .
 	\item If the Player fails    in the Minigame, his Character is \textbf{Injured} and this Room becomes \textbf{Empty}.
 \end{itemize}
@@ -73,13 +75,13 @@ Check the Puzzles section for an in-depth explanation of individual puzzles.
 
 \paragraph{Camera} 
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Connect the cables}. //TODO change name
+	\item This Room's Puzzle is \textbf{Connect the Cables}. //TODO change name
 	\item If the Player succeeds in the Minigame, he can select a Room and look into it.
 \end{itemize}
 
 \paragraph{Drone} Have you noticed those strange mosquitoes flying around the Facility?
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Fallout Computer Hacking}. //TODO change name
+	\item This Room's Puzzle is \textbf{Invert Tiles}. //TODO change name
 	\item This room spawns an associated Drone in a random Room at the beginning of the Match.
 	\item If the Player succeeds in the Minigame, he will know the location of the Drone. For the next turn he gets access to the \textbf{Move (Drone)}, \textbf{Look (Drone)} and \textbf{Shoot (Drone)} actions.
 	\item If the Player fails    in the Minigame, the Drone associated with this Room will mark his Character as an enemy, and Injure him should he enter that Drone's same Room.
@@ -87,35 +89,35 @@ Check the Puzzles section for an in-depth explanation of individual puzzles.
 
 \paragraph{EMP} TODO description
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Hanoi Tower}.
 	\item If the Player succeeds in the Minigame, all the positive effects of other Rooms don't activate this turn.
 	\item If the Player fails    in the Minigame, the positive effect of the next Room he enters doesn't activate.
 \end{itemize}
 
 \paragraph{Antiques} This stuff looks ancient even by the Ancients' standard... Are those arrowslits I see on the wall?
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Chess}.
+	\item This Room's Puzzle is \textbf{Tiles Path}.
 	\item If the Player succeeds in the Minigame, his Character gets a \textbf{Dagger}.
 	\item If the Player fails    in the Minigame, his Character is \textbf{Injured}.
 \end{itemize}
 
 \paragraph{Boulder} Quiz time: why is there a flattened Bandicoot on the floor?
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Rythm}.
 	\item When a Character is in the room a \textbf{Boulder} spawns and starts rolling in the direction that Character came from, one Room per turn. Any Character in the same Room as the Boulder is \textbf{Injured}.
 	\item If the Player succeeds in the Minigame, he avoids the Boulder.
 \end{itemize}
 
 \paragraph{Medical} 
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Precise movement}.
 	\item If the Player succeeds in the Minigame, his Character is \textbf{Healed}.
 	\item If the Player fails    in the Minigame, this Room becomes \textbf{Empty}.
 \end{itemize}
 
 \paragraph{Laser} O'Canada
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Move your cursor from one point to another avoiding the lasers}. //TODO change name
+	\item This Room's Puzzle is \textbf{Mousehou}. //TODO change name
 	\item If the Player fails    in the Minigame, his Character is \textbf{Injured}.
 \end{itemize}
 
@@ -128,7 +130,7 @@ Check the Puzzles section for an in-depth explanation of individual puzzles.
 
 \paragraph{Gravity} TODO description
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Sokoban}.
 	\item When a Character is in the room .
 	\item If the Player succeeds in the Minigame, all the other Characters are moved to a random adjacent Room.
 	\item If the Player fails    in the Minigame, his Character is moved to a random adjacent Room..
@@ -141,29 +143,29 @@ Check the Puzzles section for an in-depth explanation of individual puzzles.
 
 \paragraph{Pact} Bound by oath, you swear a pact with another player. 
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Invert Tiles}.
 	\item When two Characters are in this Room the players can form a \textbf{Pact}.
 \end{itemize}
 
 \paragraph{Mind} TODO description
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Hangman}.
 	\item If the Player succeeds in the Minigame, he can choose another Player's Character and choose an action it will perform as first action in the next round.
 	\item If the Player fails    in the Minigame, the targeted Player can choose an action for his Character, which it will perform as first action in the next round.
 \end{itemize}
 
 \paragraph{Vending Machine} 
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
+	\item This Room's Puzzle is \textbf{Slippery Sokoban}.
 	\item When a Character is in the room .
-	\item If the Player succeeds in the Minigame, his Character is \textbf{}.
-	\item If the Player fails    in the Minigame, his Character is \textbf{}.
+	\item If the Player succeeds in the Minigame, his Character gets \textbf{a random positive status}.
+	\item If the Player fails    in the Minigame, his Character gets \textbf{a random negative status}.
 \end{itemize}
 
-\paragraph{EA} 
-\begin{itemize}
-	\item When a Character is in the room its Player must buy a DLC in order to proceed in the game.
-\end{itemize}
+%\paragraph{EA} 
+%\begin{itemize}
+%	\item When a Character is in the room its Player must buy a DLC in order to proceed in the game.
+%\end{itemize}
 
 %Leave emtpy for quick copy-paste for future rooms :) //TODO remove when documentation is done
 %\paragraph{} 
