--- a/Game_Design_Document/Content/Gameplay/Game_Modes.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Modes.tex
@@ -3,6 +3,6 @@
 \input{Content/Gameplay/Game_Modes/Standard}
 \input{Content/Gameplay/Game_Modes/Teams}
 \input{Content/Gameplay/Game_Modes/Guards}
-\input{Content/Gameplay/Game_Modes/Impostor}
+%\input{Content/Gameplay/Game_Modes/Impostor}
 
 \pagebreak 
