--- a/Game_Design_Document/Content/Characters/Persuader.tex
+++ b/Game_Design_Document/Content/Characters/Persuader.tex
@@ -5,5 +5,5 @@
 The policy of Alexandria 51 was based on the persuaders. It is the real reason that led the city to rapid technological advancement. Cynical and ruthless, they do not look anyone in the face. They take advantage of the weakest to gain immediate benefit. They would be able to extract every little and confidential information from you and then use it against you. They are real strategists… albeit not too tall.\\\\
 Their special ability is \textit{"Politician"}:
 \begin{itemize}
-\item Once per game you can force another player to share two of his known rooms with you. This player will be forced to use the \textbf{Speak} action as a second action for the next turn (with a random text visible to other enemies). \textbf{TODO}: fix this
+\item Once per game you can chose a Character in your Room or an adjacent Room. The Player who owns that character will be forced to use the \textbf{Speak} action as a second action for the next turn, and share information about 2 Rooms he knows.
 \end{itemize}
