--- a/Game_Design_Document/Content/Gameplay/Game_Modes/Guards.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Modes/Guards.tex
@@ -1,5 +1,5 @@
-\subsubsection{Guards} //TODO how many players?
+\subsubsection{Guards}
 Players are split in Scavengers Team and Guards Team. There are 1-2 Guards (To be tested), the remaining Players are Scavengers.
 The Scavengers play as a Team in the Teams Game Mode.
-Each Player in the Guards team at the beginning of the game can choose any Room, look what it and its adjacent Rooms are; then choose one of those Rooms; his Character will start from that Room. The Guards Players don't know where the other Guards are starting.
+Each Player in the Guards team at the beginning of the game can choose any Room, look what it and its adjacent Rooms are; then choose one of those Rooms; his Character will start from that Room. The Guards Players also know where the other Guards are starting, but don't know the type of their Room.
 \paragraph{Victory Conditions} All the Players in the Scavengers Team win as soon as one of that Team's Characters reaches the Exit Room while holding the Magic Broom. All the players in the Guards Team win as soon as all the players in the Scavengers Team are Killed.
