--- a/Game_Design_Document/Content/Vision_Statement.tex
+++ b/Game_Design_Document/Content/Vision_Statement.tex
@@ -1,6 +1,6 @@
 \section{Vision Statement}
 
-[TODO GameTitle] is a top down 2D strategic puzzle game for up to 8 players. \\
+\textit{The Secret of Alexandria 51: The Room of Alexandria’s Broom} (in short \textit{Alexandria 51}) is a top down 2D strategic puzzle game for up to 8 players. \\
 
 Each player takes the role of a scavenger trying to get his hands on the treasure of the fallen city of Alexandria, a magical broom brimming with inconceivable powers. \\
 
@@ -12,7 +12,7 @@ Only the strongest will be able to retrieve the artifact and escape the crumblin
 
 \subsection{Logline}
 
-\textit{Solve the puzzles and grab the Broom || Get lost in spiraling madness.}
+\textit{Solve the puzzles and grab the Broom, get lost in spiraling madness.}
 
 \subsection{Look and Feel}
 
@@ -37,10 +37,9 @@ The musical accompaniment features synthwave music for both soundtrack and sound
 
 \subsection{Gameplay Synopsis}
 
-The game starts with all the players together in the middle room of the lab complex. All the other rooms are
+The game starts with all the players together in the middle room of the lab complex (Variations in the Game Modes section). All the other rooms are
 under a "fog of war", players don't know what's in them. The rooms are randomly generated and placed
-around the starting area. One room will contain the magic broom: reaching that room is the winning
-condition of the game. (TODO: non avevamo rielaborato questo concetto con il prendere la scopa e scappare da un altra parte?) \\
+around the starting area. One room will contain the magic broom. In all game modes the victory or loss condition revolves around the broom.\\
 
 The game is structured in 3 phases: firstly, the players choose two between all the possible actions (cfr. Gameplay/Actions section)  (planning phase);
 then all the chosen actions will happen one after the other following the player order, which will change at the end of every turn (action phase). After that in the third phase, all players who find themselves in the different room than the one they were in at the beginning of the turn, will have to solve a short puzzle game which type and complexity depends on the room type (puzzle phase). \\
