--- a/Technical_Design_Document/Content/Location.tex
+++ b/Technical_Design_Document/Content/Location.tex
@@ -3,7 +3,7 @@
 
 \subsection{Monthly expenses}
 For the development of the game we will need enough space to host the members of the staff that need in person coordination the most, which are: the 3 game designers/developers, the AWS developer, the web developer and the 2D artist. For this reason we will choose an office with at least 70mq, which should give enough room to everyone including the playtesters when they'll come to test our game on site. \\
-We found that we can get a reasonable price of about 10€/mq in the city of Trento because TODO Mike insert reason why Trento good. \\\\
+We found that we can get a reasonable price of about 10€/mq in the city of Trento that also has high speed Internet connection and good transport services. \\\\
 In addition to that we have to also consider:
 \begin{itemize}
 	\item Electricity and heating
