--- a/Technical_Design_Document/Content/Project_goal.tex
+++ b/Technical_Design_Document/Content/Project_goal.tex
@@ -1,3 +1,3 @@
 \section{Project Goal}
 
-Our goal is to provide 24/7 game availability for players from both PC, Web Browser and Android (TODO with possibility of crossplay?) through an internet connection.
+Our goal is to provide 24/7 game availability for players from both PC, Web Browser and Android through an internet connection with possibility of crossplay event and tournaments.
