fixed document structure and added gantt section

--- a/Technical_Design_Document/Content/Delivery.tex
+++ b/Technical_Design_Document/Content/Delivery.tex
@@ -1,4 +1,6 @@
 \section{Delivery}
+\subsection{Estimated Delivery Time}
+TODO: Gantt related
 
 \subsection{Delivery Platform}
 The PC      version of the game will be delivered through Steam. 
