--- a/Technical_Design_Document/Content/Development.tex
+++ b/Technical_Design_Document/Content/Development.tex
@@ -2,5 +2,7 @@
 
 \input{Content/Development/Hardware}
 \input{Content/Development/Software}
+\input{Content/Development/Major_Software_Dev_Tasks}
+\input{Content/Development/Development_Gantt}
 
 \pagebreak 
