Added translation cost analysis

--- a/Technical_Design_Document/Content/Staff/Ingame.tex
+++ b/Technical_Design_Document/Content/Staff/Ingame.tex
@@ -1,13 +1,16 @@
 ﻿\subsection{Ingame}
 
-To develop our game we will employ:
+To develop our game we will hire:
 
 \begin{itemize}
 	\item Three Game Designers which will also take the role of Game Developers 
 	\item A 2D Artist to create sprites and other visual assets for our game
 	\item A Music Artist to give shape to the soundtrack and the sound effects in our game
 	\item Two testers to playtest our game prior the launch
+	\item A professional translation service to translate the game from English to Simplified Chinese and Japanese
 \end{itemize}
+Regarding translation, we calculated that if we have 27 rooms per 100 words each (room description), plus 20 puzzles per 50 words each (puzzle description) plus 300 words for various UI elements, we reach a grand total of 4000 words. \\
+Since good context-sensitive translation is around 0.12 € per word, the foreseen cost is around 480 € per language, making it extremely cheap to appeal to non-english speaking audiences at launch.\\
 
 \addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | r | }
 	\hline
@@ -18,7 +21,10 @@ To develop our game we will employ:
 	\hline
 	2D artist			 & 1     & 20€/asset &  500 assets	 & 10000.00€ \\
 	Music artist			 & 1     & 750€/minute &  15 minutes	 & 11250.00€ \\
+	Translation			& 2  & 0.12€/word & 4000 words & 960.00€ \\
 	\hline
-	\textbf{Total}       &       &        &          &       87250.00€ \\
+	\textbf{Total}       &       &        &          &       88210.00€ \\
 	\hline
 \end{tabular}}
+
+\pagebreak
