--- a/Technical_Design_Document/Content/Staff/Other.tex
+++ b/Technical_Design_Document/Content/Staff/Other.tex
@@ -1,6 +1,6 @@
 ﻿\subsection{Other}
 
-We will also hire:
+We will also employ:
 
 \begin{itemize}
 	\item A Web Developer to setup the main site for our game
