Updated media list GDD with puzzles

--- a/Game_Design_Document/Content/Media_List.tex
+++ b/Game_Design_Document/Content/Media_List.tex
@@ -41,6 +41,7 @@
      	\item Antiques Room Sprite
      \end{itemize}
  		\\
+		\hline
 \end{tabular}
    	
 \pagebreak
@@ -71,13 +72,77 @@
      	\item Persuader Sprite
      	\item Drone Sprite
      \end{itemize}
-     \\
+	 \\
      \hline
-     \textbf{HUD}& Image & 
+     \textbf{Puzzles}& Image & 
      \begin{itemize}
-     	\item Status Icon
-     	\item Normal Status Icon
-     	\item Injuried Status Icon
+     	\item \textit{Jigsaw} pieces tileset
+     	\item \textit{Jigsaw} background
+     	\item \textit{Jigsaw} box conteiner
+		\item \textit{Connect tubes} tileset of tubes
+     	\item \textit{Connect tubes} background
+     	\item \textit{Connect tubes} box cointainer
+		\item \textit{Connect gears} tileset of gears
+     	\item \textit{Connect gears} background
+     	\item \textit{Connect gears} box cointainer
+     	\item \textit{Connect lights} background
+     	\item \textit{Connect lights} box cointainer
+     	\item \textit{Electrolizer} connectors
+     	\item \textit{Electrolizer} background
+	\end{itemize}
+	\\
+	\hline
+\end{tabular}
+\pagebreak
+	
+\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
+     \hline
+     \textbf{Puzzles}& Image & 
+     \begin{itemize}
+     	\item \textit{Hacker} "red" blocks
+     	\item \textit{Hacker} background
+     	\item \textit{Decryptor} connector 1
+     	\item \textit{Decryptor} connector 2
+     	\item \textit{Decryptor} point
+     	\item \textit{Decryptor} background
+     	\item \textit{Rythm} button to be pressed
+     	\item \textit{Rythm} background
+		\item \textit{Bullet hell} bullet
+		\item \textit{Bullet hell} background
+		\item \textit{Precise movement} spot
+		\item \textit{Precise movement} locket
+		\item \textit{Precise movement} background
+		\item \textit{Sokoban} rock
+		\item \textit{Sokoban} obstable
+		\item \textit{Sokoban} background
+		\item \textit{Slippery Sokoban} n* rocks
+		\item \textit{Slippery Sokoban} n* buttons
+		\item \textit{Slippery Sokoban} obstable
+		\item \textit{Slippery Sokoban} background
+		\item \textit{Hangman} body
+		\item \textit{Hangman} background
+		\item \textit{Hanoi Tower} n * circle
+		\item \textit{Hanoi Tower} shaft
+		\item \textit{Hanoi Tower} background
+		\item \textit{Invert Tiles} tileset
+		\item \textit{Invert Tiles} box container
+		\item \textit{Invert Tiles} background
+		\item \textit{Tiles Path} tileset
+		\item \textit{Tiles Path} box container
+		\item \textit{Tiles Path} background
+    \end{itemize}
+     \\
+	 \hline
+\end{tabular}
+\pagebreak
+
+\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
+	\hline
+    \textbf{HUD}& Image & 
+    \begin{itemize}
+    	\item Status Icon
+    	\item Normal Status Icon
+    	\item Injuried Status Icon
      	\item Killed Status Icon
      	\item Trapped Status Icon
      	\item Blinded Status Icon
@@ -88,15 +153,6 @@
      	\item Lucky Status Icon
      	\item Action Icon
      	\item Move Icon
-    \end{itemize}
-	\\
-	\end{tabular}
-	
-	\pagebreak
-	\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
-	\hline
-	 \textbf{HUD}& Image & 
-	 \begin{itemize}
      	\item Look Icon
      	\item Heal Icon
      	\item Push Icon
@@ -104,13 +160,39 @@
      	\item Thrust Icon
      	\item Weapon Icon
      	\item Special Action Icon
-     \end{itemize}
-     \\
-     \hline
-     \textbf{SFX}& Sound & 
-     \begin{itemize}
+    \end{itemize}
+	\\
+	\hline
+    \textbf{SFX}& Sound & 
+    \begin{itemize}
      	\item Menu's Music
      	\item In-game's Music
+		\item Jigsaw puzzle Music
+		\item Connect tubes puzzle Music
+		\item Connect gears puzzle Music
+		\item Connect lights puzzle Music
+		\item Electrolizer puzzle Music
+		\item Hacker puzzle Music
+		\item Decryptor puzzle Music
+		\item Rythm puzzle Music
+	\end{itemize}
+	\\
+	\hline
+\end{tabular}
+\pagebreak
+
+\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
+	\hline
+	\textbf{SFX}& Sound & 
+	\begin{itemize}
+		\item Bullet hell puzzle Music
+		\item Precise movement puzzle Music
+		\item Sokoban puzzle Music
+		\item Slippery Sokoban puzzle Music
+		\item Hangman puzzle Music
+		\item Hanoi Tower puzzle Music
+		\item Invert Tiles puzzle Music
+		\item Tiles Path puzzle Music
      	\item Injuried sound effect
      	\item Killed sound effect
 		\item Empty Room sound effect
@@ -132,16 +214,17 @@
 		\item Antiques Room sound effect
 		\item Boulder Room sound effect
 		\item Medical Room sound effect	
+		\item Laser Room sound effect
 	\end{itemize}
 	\\
-	\end{tabular}
-	
-	\pagebreak
-	\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
+	\hline
+\end{tabular}
+\pagebreak
+
+\begin{tabular}{|m{3cm}|m{3cm}|m{7cm}|}
 	\hline
 	\textbf{SFX}& Sound & 
 	\begin{itemize}
-		\item Laser Room sound effect
 		\item Empty Room sound effect
 		\item Retro Gaming Room sound effect
 		\item Gravity Room sound effect
@@ -149,11 +232,6 @@
 		\item Pact Room sound effect
 		\item Mind Room sound effect
 		\item Vending Machine Room sound effect
-	
      \end{itemize}\\
      \hline
 \end{tabular}	
-
-
-
-\pagebreak 
