--- a/Game_Design_Document/Content/Gameplay/Game_Mechanics/Rooms.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Mechanics/Rooms.tex
@@ -20,14 +20,14 @@ For the puzzles description, look at the \textbf{Puzzles} section.
 
 \paragraph{Portal} This room was used for testing teleportation technologies by the Ancients. However it's unstable and hard to predict.
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Connect the Light}. //TODO change name
+	\item This Room's Puzzle is \textbf{Connect the Light}.
 	\item If the Player succeeds in the Minigame, his Character is \textbf{Teleported} to a Room of his choice.
 	\item If the Player fails    in the Minigame, his Character is \textbf{Teleported} to a randomly chosen Room.
 \end{itemize}
 
 \paragraph{Gear} This mechanical Room controls the movement of the Rooms in the Facility.
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Connect the Gears}. //TODO change name
+	\item This Room's Puzzle is \textbf{Connect the Gears}.
 	\item If the Player succeeds in the Minigame, he can move the Rooms in the line of this Room along one axis.
 \end{itemize}
 
@@ -63,7 +63,7 @@ For the puzzles description, look at the \textbf{Puzzles} section.
 
 \paragraph{Bomb}
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Hangman}. //TODO change name
+	\item This Room's Puzzle is \textbf{Hangman}.
 	\item When a Character is in the room .
 	\item If the Player fails    in the Minigame, his Character is \textbf{Injured} and this Room becomes \textbf{Empty}.
 \end{itemize}
@@ -75,19 +75,19 @@ For the puzzles description, look at the \textbf{Puzzles} section.
 
 \paragraph{Camera} 
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Connect the Cables}. //TODO change name
+	\item This Room's Puzzle is \textbf{Connect the Cables}.
 	\item If the Player succeeds in the Minigame, he can select a Room and look into it.
 \end{itemize}
 
 \paragraph{Drone} Have you noticed those strange mosquitoes flying around the Facility?
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Invert Tiles}. //TODO change name
+	\item This Room's Puzzle is \textbf{Invert Tiles}.
 	\item This room spawns an associated Drone in a random Room at the beginning of the Match.
 	\item If the Player succeeds in the Minigame, he will know the location of the Drone. For the next turn he gets access to the \textbf{Move (Drone)}, \textbf{Look (Drone)} and \textbf{Shoot (Drone)} actions.
 	\item If the Player fails    in the Minigame, the Drone associated with this Room will mark his Character as an enemy, and Injure him should he enter that Drone's same Room.
 \end{itemize}
 
-\paragraph{EMP} TODO description
+\paragraph{EMP} 
 \begin{itemize}
 	\item This Room's Puzzle is \textbf{Hanoi Tower}.
 	\item If the Player succeeds in the Minigame, all the positive effects of other Rooms don't activate this turn.
@@ -117,7 +117,7 @@ For the puzzles description, look at the \textbf{Puzzles} section.
 
 \paragraph{Laser} O'Canada
 \begin{itemize}
-	\item This Room's Puzzle is \textbf{Mousehou}. //TODO change name
+	\item This Room's Puzzle is \textbf{Mousehou}.
 	\item If the Player fails    in the Minigame, his Character is \textbf{Injured}.
 \end{itemize}
 
@@ -128,7 +128,7 @@ For the puzzles description, look at the \textbf{Puzzles} section.
 	\item If the Player fails    in the Minigame, his Character is \textbf{Depressed}.
 \end{itemize}
 
-\paragraph{Gravity} TODO description
+\paragraph{Gravity} 
 \begin{itemize}
 	\item This Room's Puzzle is \textbf{Sokoban}.
 	\item When a Character is in the room .
@@ -147,7 +147,7 @@ For the puzzles description, look at the \textbf{Puzzles} section.
 	\item When two Characters are in this Room the players can form a \textbf{Pact}.
 \end{itemize}
 
-\paragraph{Mind} TODO description
+\paragraph{Mind}
 \begin{itemize}
 	\item This Room's Puzzle is \textbf{Hangman}.
 	\item If the Player succeeds in the Minigame, he can choose another Player's Character and choose an action it will perform as first action in the next round.
@@ -167,10 +167,10 @@ For the puzzles description, look at the \textbf{Puzzles} section.
 %	\item When a Character is in the room its Player must buy a DLC in order to proceed in the game.
 %\end{itemize}
 
-%Leave emtpy for quick copy-paste for future rooms :) //TODO remove when documentation is done
+%Leave emtpy for quick copy-paste for future rooms :)
 %\paragraph{} 
 %\begin{itemize}
-%	\item This Room's Puzzle is \textbf{TODO}.
+%	\item This Room's Puzzle is \textbf{}.
 %	\item When a Character is in the room .
 %	\item If the Player succeeds in the Minigame, his Character is \textbf{}.
 %	\item If the Player fails    in the Minigame, his Character is \textbf{}.
