exported mobile_ongoing png from pdf, final (?) cost estimation

--- a/Technical_Design_Document/Content/Cost_estimation.tex
+++ b/Technical_Design_Document/Content/Cost_estimation.tex
@@ -52,10 +52,10 @@ See section \ref{section:backend_hardware}
 	Amazon Elastic Block Storage (EBS) & Asia & Monthly &  18.00€ & \\
 	Amazon EC2 c4.xlarge on demand     & Asia & Monthly & 344.87€ & \\
 	\hline
-	\textbf{Total}                     & Asia & Monthly & 362.87€ &  725.74€\\
+	\textbf{Total}                     & Asia & Monthly & 362.87€ &  442.70€\\
 	\hline
 	\hline
-	\textbf{Total}                     &      & Monthly &         & 1480.68€\\
+	\textbf{Total}                     &      & Monthly &         & 1197.64€\\
 	\hline
 \end{tabular}}
 
@@ -80,23 +80,31 @@ See sections \ref{section:Development_hardware} and \ref{section:Development_sof
 \subsection{Staff}
 
 See section \ref{section:staff}
-TODO @Dige missing €
 
 \addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | r | }
 	\hline
-	                     & Count & Months & Cost:Mo  & TOT \\
+	                     & Count  & Months & Cost:Mo  & TOT \\
 	\hline
-	Junior Developer     & 3     & 12     & 3500.00€ & 126000.00€ \\
-	Web Developer        & 1     & 12     & 1500.00€ &  18000.00€ \\
-	2d Artist            & 1     & 12     & 3000.00€ &  36000.00€ \\
-	Composer             & 1     & 2      & 3000.00€ &   3000.00€ \\
-	Tester               & 2     & 1      & 1500.00€ &   3000.00€ \\
-	Social Media Manager & 1     & 12     &    TODO  &            \\
-	Community Manager    & 1     & 12     &    TODO  &            \\
+	Junior Developer     & 3      & 8      & 2500.00€ & 60000.00€ \\
+	Web Developer        & 1      & 1      & 2500.00€ &  2500.00€ \\
+	AWS Developer        & 1      & 8      & 2800.00€ & 22400.00€ \\
+	Tester               & 2      & 2      & 1500.00€ &  6000.00€ \\
+	Social Media Manager & 1      & 4      & 1200.00€ &  4800.00€ \\
+	Community Manager    & 2      & 2      & 1000.00€ &  4000.00€ \\
+	Accountant           & 1      & 8      & 1500.00€ & 12000.00€ \\
 	\hline
-	\textbf{Total}       &       &        &          &      TODO€ \\
+	                     & Count  & Hours  & Cost:Ho  & TOT \\
 	\hline
-	
+	Legal assistant      & 1      & 720    &   25.00€ & 18000.00€ \\
+	\hline                        
+	\textbf{Outsourced}  & Per    & Amount & Cost     & TOT \\
+	\hline                        
+	2d Artist            & Asset  &  500   &   20.00€ &  10000.00€ \\
+	Composer             & Minute &   15   &  750.00€ &  11250.00€ \\
+	Translation          & Word   & 4000   &    0.12€ &    960.00€ \\
+	\hline                        
+	\textbf{Total}       &        &        &          &      TODO€ \\
+	\hline
 \end{tabular}}
 
 \subsection{Location}
@@ -106,36 +114,46 @@ See section \ref{section:location}
 	\hline
 	                     & Months & Cost/Mo  & TOT \\
 	\hline
-	Rent              &   12      &          &    € \\
-	Cleaning       &   12       &          &    € \\
-	Electricity, heating       &    12     &          &    € \\
-	Internet plan   &    12     &        &       € \\
-	\hline                                                
-	\textbf{Total}       &       &        &       € \\
+	Rent                 &    8   &  760.00€ &  6080.00€ \\
+	Cleaning             &    8   &  300.00€ &  2400.00€ \\
+	Electricity, heating &    8   &   30.00€ &   240.00€ \\
+	Internet plan        &    8   &  300.00€ &  2400.00€ \\
 	\hline
-	
+	\textbf{Total}       &        &          & 11120.00€ \\
+	\hline
 \end{tabular}}
 
 Furniture:
 
-\addvbuffer[10pt 10pt]{\begin{tabular}{ l | l | r }
-	\hline
-	                     & Count & TOT \\
-	\hline
-	Desk?                &       &    € \\
-	
-	\hline
-	\textbf{Total}       &       &    € \\
-	\hline               
-	
+\addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | }
+    \hline
+                                & Count & Cost    & TOT \\
+    \hline                     
+    Office chairs               & 7     &  63.99€ &  447.93€ \\
+    Office desks                & 7     & 114.00€ &  798.00€ \\
+    \hline                     
+    Printer                     & 1     & 179.00€ &  179.00€ \\
+    Toner                       & 1     &  43.99€ &   43.99€ \\
+    Printing paper              & 1     &  24.99€ &   24.99€ \\
+    Whiteboard and markers      & 1     &  40.00€ &   40.00€ \\
+    \hline
+    Landline telephone receiver & 1     &  66.50€ &   66.50€ \\
+    Microwave oven              & 1     & 100.00€ &  100.00€ \\
+    Fridge                      & 1     & 259.00€ &  259.00€ \\
+    \hline
+    \textbf{Total}              &       &         & 1959.41€ \\
+    \hline
 \end{tabular}}
 
 
 \subsection{Totals}
 
 
-\addvbuffer[10pt 10pt]{\begin{tabular}{ r | r | r }
-	TOTAL & BUDGET & SURPLUS \\
-	TODO & & \\
-	
+\addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | }
+    \hline
+	TOTAL       & 175'653.77€ \\
+	BUDGET      & 185'000.00€ \\
+	SURPLUS     &   9'346.23€ \\
+    \hline
 \end{tabular}}
+The surplus is enough to sustain the game servers on all 3 continents for ~5-6 months assuming the game has 0 revenue.
