--- a/Game_Design_Document/Content/Gameplay/Game_Mechanics/Puzzles.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Mechanics/Puzzles.tex
@@ -38,7 +38,7 @@
 
 \centeredgraphics{../Pictures/Puzzles/Pokemon_ice.png}
 
-\paragraph{Hangman} Classic hangman with letters attempts, or Fallout 3 hacking minigame style, with a words pool and reporting how many coorect letters were in a wrong word chosen.
+\paragraph{Hangman} Classic hangman with letters attempts.
 
 \paragraph{Hanoi Tower} Shouldn't need an explanation.
 
