--- a/Technical_Design_Document/Content/Cost_estimation.tex
+++ b/Technical_Design_Document/Content/Cost_estimation.tex
@@ -83,7 +83,7 @@ See section \ref{section:staff}
 
 \addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | r | }
 	\hline
-	                     & Count  & Months & Cost:Mo  & TOT \\
+	                     & Count  & Months & Cost/Mo  & TOT \\
 	\hline
 	Junior Developer     & 3      & 8      & 2500.00€ & 60000.00€ \\
 	Web Developer        & 1      & 1      & 2500.00€ &  2500.00€ \\
@@ -93,7 +93,7 @@ See section \ref{section:staff}
 	Community Manager    & 2      & 2      & 1000.00€ &  4000.00€ \\
 	Accountant           & 1      & 8      & 1500.00€ & 12000.00€ \\
 	\hline
-	                     & Count  & Hours  & Cost:Ho  & TOT \\
+	                     & Count  & Hours  & Cost/Ho  & TOT \\
 	\hline
 	Legal assistant      & 1      & 720    &   25.00€ & 18000.00€ \\
 	\hline                        
@@ -155,5 +155,6 @@ Furniture:
 	BUDGET      & 185'000.00€ \\
 	SURPLUS     &   9'346.23€ \\
     \hline
-\end{tabular}}
+\end{tabular}}\\
+
 The surplus is enough to sustain the game servers on all 3 continents for ~5-6 months assuming the game has 0 revenue.
